<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackYaleAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="action">Action</string>
    <string name="name_of_sync">Title</string>
    <string name="address_of_sync">Location</string>
    <string name="arrive_leave">When you arrive?</string>
    <string name="radius">Radius</string>
    <string name="send_text">Send Text</string>
    <string name="checkbox">CheckBox</string>
    <string name="recipient">Recipient</string>
    <string name="message">Message</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ringer">Sound</string>
    <string name="miles">Miles</string>
    <string name="silent">Silent  </string>
    <string name="vibrate">Vibrate </string>
    <string name="normal">Normal</string>
    <string name="loud">Loud  </string>
    <string name="trigger">Trigger </string>
    <string name="arrive">Arrive </string>
    <string name="leave">Leave </string>
    <string name="submit">Submit </string>

</resources>